# object_system

./: .gitignore  CMakeLists.txt  Makefile
Private/: Class.cpp  GarbageCollection.cpp  GarbageCollection.h  Object.cpp  ObjectField.cpp  ObjectPool.cpp  ObjectPool.h
Public/Object/: Object.h  ObjectField.h  TypeTraits.h  Types.h
Tests/: GarbageCollection.test.cpp  Object.test.cpp  StrongObjectPtr.test.cpp  TestObjects.cpp  TestObjects.h  TypeTraits.test.cpp  WeakObjectPtr.test.cpp
_scripts/: build.bat  clean.bat  configure.bat  test.bat
